--- a/professeurs_absents.css
+++ b/professeurs_absents.css
@@ -17,11 +17,22 @@ body {
     color: white;
 }
 
+.button-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 0;
+}
+
+.button-container .button {
+    margin: 0 10px; /* Espace entre les boutons */
+}
+
 .container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 50px;
+    margin-top: 20px;
 }
 
 .button {
@@ -36,13 +47,14 @@ body {
 }
 
 .button:hover {
-    background-color: #004d86;
+    background-color: #003f6a;
 }
 
 #profAbsentContainer {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin-bottom: 20px; /* Espace en bas pour le bouton Enregistrer */
 }
 
 .prof-absent {
