--- a/affichagemes.css
+++ b/affichagemes.css
@@ -4,7 +4,17 @@ body {
     padding: 0;
     background-color: #004d86; /* Couleur de fond */
     color: white; /* Couleur du texte */
+    font-size: 22px; /* Taille de la police */
 }
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
+    font-size: 22px; /* Taille de la police */
+}
+
 
 .navbar {
     background-color: #003f6a; /* Couleur de la barre de navigation */
